# bite-score

./: .env.example  .gitignore  Makefile  README.md  bite-score-prompt.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  migrations.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_certification_uploads.py  003_badge_requests.py
backend/app/: config.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: auth.py  billing.py  businesses.py  dashboard.py  reviews.py  uploads.py
backend/app/core/: deps.py  security.py
backend/app/db/: migrate.py  types.py
backend/app/models/: __init__.py  admin_audit.py  badge_request.py  business.py  category.py  certification_upload.py  claim_request.py  enums.py  evidence_upload.py  location.py  report_flag.py  review.py  structured_score.py  user.py  verification_badge.py
backend/app/schemas/: __init__.py
backend/app/seed/: seed.py
backend/app/services/: business_create.py  business_query.py  covers.py  duplicate_detection.py  evidence.py  geo.py  geocoding.py  scoring.py  storage.py
backend/scripts/: entrypoint.sh
backend/tests/: conftest.py  test_api_auth.py  test_api_badge_requests.py  test_api_businesses.py  test_api_certifications.py  test_api_dashboard.py  test_api_reviews.py  test_api_uploads.py  test_business_create.py  test_business_query.py  test_covers.py  test_duplicate_detection.py  test_geo.py  test_geocoding.py  test_migrations.py  test_scoring.py  test_security.py
frontend/: nuxt.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/components/: AccountLinks.vue  AppFooter.vue  AppHeader.vue  AuthModal.vue  BusinessCard.vue  CategoryScroller.vue  CuisineRow.vue  DiscoverCategoryBar.vue  DiscoverFilterSidebar.vue  DiscoverHeader.vue  DiscoverMap.vue  DiscoverPage.vue  DiscoverPromoRow.vue  DiscoverShell.vue  DiscoverToolbar.vue  DiscoverySection.vue  FilterToggle.vue  LegalPage.vue  LocationBar.vue  RestaurantCard.vue  ScoreBadge.vue  (+4 more)
terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
(+45 files in other folders)
